# isaac_UR5e

./: .dockerignore  .gitignore  Dockerfile.isaac  README.md  robot_environment.yml  run_env.sh  run_isaaclab.sh  test_env.py  view_robot.py
dreamerv3/: configs.yaml  dreamer.py  models.py  tools.py
dreamerv3/envs/: isaac_lab_wrapper.py  ur5e.py
gazebo_cable_env/: CMakeLists.txt  README.md  package.xml
gazebo_cable_env/config/: controllers.yaml
gazebo_cable_env/launch/: simulation.launch.py
gazebo_cable_env/scripts/: test_robot_movement.py  test_simulation.py
gazebo_cable_env/urdf/: cable.urdf.xacro  circuit_board.urdf.xacro  robotiq_hande_sim.xacro  ur5e_hande.urdf.xacro  world.urdf.xacro
gazebo_cable_env/worlds/: cable_insertion.sdf  cable_insertion.world
install/: local_setup.sh  setup.sh
install/gazebo_cable_env/share/gazebo_cable_env/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gazebo_cable_env/share/gazebo_cable_env/cmake/: gazebo_cable_envConfig-version.cmake  gazebo_cable_envConfig.cmake
install/gazebo_cable_env/share/gazebo_cable_env/config/: controllers.yaml
install/gazebo_cable_env/share/gazebo_cable_env/environment/: ament_prefix_path.dsv  path.dsv
install/gazebo_cable_env/share/gazebo_cable_env/launch/: simulation.launch.py
install/gazebo_cable_env/share/gazebo_cable_env/scripts/: test_robot_movement.py  test_simulation.py
install/gazebo_cable_env/share/gazebo_cable_env/urdf/: cable.urdf.xacro  circuit_board.urdf.xacro  (+3 more)
install/robotiq_hande_description/share/robotiq_hande_description/: local_setup.sh  package.sh
log/: latest_build
robotic_world_model/: README.md
robotic_world_model/assets/models/: pretrain_rnn_ens.pt
robotic_world_model/scripts/reinforcement_learning/model_based/: train.py
rsl_rl_rwm/rsl_rl/runners/: mbpo_on_policy_runner.py
rwm_ur5e/: pyproject.toml
rwm_ur5e/configs/: __init__.py  rsl_rl_cfg.py  ur5e_reach_cfg.py
rwm_ur5e/envs/: __init__.py  ur5e_reach_env.py
rwm_ur5e/mdp/: __init__.py  observations.py
rwm_ur5e/scripts/: debug_robot.py  play.py  train.py  visualize.py
(+6 files in other folders)
